Fix profile menu visibility

--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -1,9 +1,9 @@
 .speedDial {
-  position: fixed;
-  right: 3vmax;
-  top: 3vmax;
+  position: fixed !important;
+  right: 3vmax !important;
+  top: 3vmax !important;
+  z-index: 99999 !important;
 }
-
 .speedDialIcon {
   width: 56px;
   height: 56px;
